test_regress/t/t_class_extends_nf_bad.out
%Error: t/t_class_extends_nf_bad.v:10:19: Class to extend not found: 'IsNotFound'
                                        : ... Suggested alternative: 'IsFound'
   10 | class Cls extends IsNotFound;
      |                   ^~~~~~~~~~
%Error: Exiting due to
